- Fixed bug where multi dropdown flashed on mousedown. - Fixed z-index of multi ripple line.

--- a/src/scss/selectmenu.scss
+++ b/src/scss/selectmenu.scss
@@ -35,6 +35,10 @@
         padding: $input-lg-padding-y $input-lg-padding-x;
         font-size: $input-lg-font-size;
     }
+
+    &.focus ~ .ripple-line {
+        z-index: 3;
+    }
 }
 
 .selectmenu-placeholder {
